# cookbook-ai-engineer

./: ai-mentor.md  lesson.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 41b653941126_create_initial_tables.py  6af203b52974_enable_vector_extension.py  ecbe016392bf_enable_vector_extension.py
backend/app/: config.py
backend/app/database/: models.py
docs/: todos.md
